# testpacito

./: Cargo.toml  README.md  build.rs  run_test.sh
src/: ft_tests.rs  main.rs  printf_tests.rs
