[package]
name = "testpacito"
version = "0.1.0"
authors = ["dpattij"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.65"
gag = "0.1.10"
rand = "0.7"
libc-stdhandle = "0.1.0"
detour = "0.7.1"

[dev-dependencies]
rusty-fork = "0.2.1"